[project]
name = "ai-tutor-env"
version = "1.0.0"
description = "AI Tutor Evaluation Environment"
authors = [
    { name = "Akash Sharma" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openai",
    "pydantic",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"